[package]
name = "akc"
description = "A command-line tool for managing connections with friends."
version = "0.2.0"
authors = ["Mohammad Kermani <mkermani144@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"

homepage = "https://github.com/mkermani144/akc"
repository = "https://github.com/mkermani144/akc"
documentation = "https://github.com/mkermani144/akc#usage"

keywords = ["cli", "friendship"]
categories = ["command-line-utilities"]

[dependencies]
confy = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "3.1.8", features = ["derive"] }
