[package]
name = "akc"
description = "A command-line tool for managing connections with friends."
version = "0.2.0"
authors = ["Mohammad Kermani <mkermani144@gmail.com>"]
edition = "2021"

license = "MIT"
readme = "README.md"

homepage = "https://github.com/mkermani144/akc"
repository = "https://github.com/mkermani144/akc"
documentation = "https://github.com/mkermani144/akc#usage"

keywords = ["cli", "friendship"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
rand = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
